Customized colors and developed way to use Categories, Tasks, and Milestones to represent ESTA needs.  TODO: figure out how to ensure milestones don't overlap.  The original code takes care of overlapping tasks, but the code doesn't have a concept for overlapping milestones.

--- a/gantt-chart-d3.css
+++ b/gantt-chart-d3.css
@@ -4,35 +4,35 @@
 }
 
 .task-bar {
-	fill: #FF8B00;
+	fill: #0076b8;
 }
 
 .task-progress-bar {
-	fill: #64AAD0;
+	fill: #45b649;
 }
 
 .task-bar:hover {
-	fill: #FFBF73;
-	stroke: #64AAD0;
+	fill: #0076b8;
+	stroke: #0076b8;
 }
 
 .task-label {
-	fill: #034569;
+	fill: black;
 }
 
 .milestone-mark {
-	stroke: #64AAD0;
-	fill: #64AAD0;
+	stroke: #0076b8;
+	fill: #0076b8;
 	stroke-width: 2;
 }
 
 .milestone-label {
-	fill: #034569;
+	fill: black;
 }
 
 .dateline-line {
-	stroke: red;
-	stroke-width: 2;
+	stroke: blue;
+	stroke-width: 1;
 }
 
 .dateline-label{
